--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,13 @@
-server_name thegagali.com www.thegagali.com;
+events {
+    worker_connections 1000;
+}
 
-    location / {
-        proxy_pass http://localhost:8000; # your app's port
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+http {
+    server {
+        listen 80;
+
+        location / {
+            proxy_pass http://app:8000;
+        }
     }
+}
