--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,7 @@ events {
 http {
     server {
         listen 80;
+        server_name www.thegagali.com thegagali.com;
 
         location / {
             proxy_pass http://app:8000;
