--- a/nginx.conf
+++ b/nginx.conf
@@ -3,9 +3,17 @@ events {
 }
 
 http {
+        server {
+        listen 80;
+        server_name thegagali.com;
+
+        return       301 http://www.thegagali.com$request_uri;
+        }
+    }
+
     server {
         listen 80;
-        server_name www.thegagali.com thegagali.com;
+        server_name www.thegagali.com;
 
         location / {
             proxy_pass http://app:8000;
