--- a/nginx.conf
+++ b/nginx.conf
@@ -3,16 +3,9 @@ events {
 }
 
 http {
-        server {
-        listen 80;
-        server_name thegagali.com;
-
-        return       301 http://www.thegagali.com$request_uri;
-        }
-
     server {
         listen 80;
-        server_name www.thegagali.com;
+        server_name thegagali.com www.thegagali.com;
 
         location / {
             proxy_pass http://app:8000;
