--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,12 @@ services:
     build:
       context: .
     ports: 
-      - "8000"
+      - "8000:8000"
 
   nginx:
     image: nginx:latest
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/sites-available/default:ro
     depends_on:
       - app
     ports:
