--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,10 @@
-events {
-    worker_connections 1000;
-}
+server_name thegagali.com www.thegagali.com;
 
-http {
-    server {
-        listen 80;
-        server_name thegagali.com www.thegagali.com;
-
-        location / {
-            proxy_pass http://app:8000;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
+    location / {
+        proxy_pass http://localhost:8000; # your app's port
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
-}
