--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
   nginx:
     image: nginx:latest
     volumes:
-      - ./nginx.conf:/etc/nginx/sites-available/default:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - app
     ports:
