--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 server_name thegagali.com www.thegagali.com;
 
     location / {
-        proxy_pass http://localhost:8000; # your app's port
+        proxy_pass http://app:8000; # your app's port
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
