--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ events {
 http {
     server 
         {
-        server_name thegagali.com www.thegagali.com;
+        #server_name thegagali.com www.thegagali.com;
         listen 80;
 
         location / {
