--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,6 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
+            #proxy_cache_bypass $http_upgrade;
     }}
 }
