--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ http {
             proxy_pass http://app:8000; # your app's port
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
+            #proxy_set_header Connection 'upgrade';
             #proxy_set_header Host $host;
             #proxy_cache_bypass $http_upgrade;
     }}
