--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,11 +2,17 @@ server
     {
     server_name thegagali.com www.thegagali.com;
     listen 80;
+    return 301 https://$host$request_uri;
+}
 
-     location / {
-        proxy_pass http://app:8000; # your app's port
-        #proxy_set_header Upgrade $http_upgrade;
-        #proxy_set_header Connection 'upgrade';
-        #proxy_set_header Host $host;
-        #proxy_cache_bypass $http_upgrade;
-}}
+server 
+    {
+    server_name thegagali.com www.thegagali.com;
+    listen 443 ssl;
+    ssl_certificate     certs/thegagali.pem;
+    ssl_certificate_key certs/thegagali-key.pem;
+    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers         HIGH: !aNULL: !MD5;
+    location / {
+        proxy_pass  http://app:8000; # your app's port    
+}
