--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,4 +2,4 @@ FROM nginx
 RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx.conf /etc/nginx/conf.d/
 COPY ssl_ke.pem certs/thegagali.pem
-COPY ssl_private_ke.pem certs/thegagali-key.pem
+COPY ssl_privat_ke.pem certs/thegagali-key.pem
