--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx
+FROM nginx:latest
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY ssl_ke.pem certs/thegagali.pem
 COPY ssl_privat_ke.pem certs/thegagali-key.pem
