--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,6 +33,8 @@ http {
         ssl_ciphers         HIGH:!aNULL:!MD5;
         location / {
             proxy_pass http://app:8000; # your app's port
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
             }
         }
 }
